--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: API Tests  # Название workflow в интерфейсе GitHub
+name: API Tests with Allure
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
     
 jobs:
   test:
-    runs-on: ubuntu-latest  # Запускается на Ubuntu
+    runs-on: ubuntu-latest
     
     steps:
     # 1. Клонирует код репозитория
@@ -21,40 +21,79 @@ jobs:
       with:
         python-version: '3.14'
 
-    # 3. Устанавливает Ruff линтер
+    # 3. Устанавливает зависимости для тестов
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install pytest allure-pytest requests
+
+    # 4. Устанавливает Ruff линтер
     - name: Install Ruff
       run: pip install ruff
 
-    # 4. Запускает линтер
+    # 5. Запускает линтер
     - name: Run Ruff linter
       run: ruff check .
 
-    # 5. Запускает сервисы через docker-compose
+    # 6. Устанавливает Allure CLI
+    - name: Install Allure
+      run: |
+        sudo apt-get update
+        sudo apt-get install default-jre
+        wget https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz
+        tar -zxvf allure-2.27.0.tgz
+        sudo mv allure-2.27.0 /opt/allure
+        sudo ln -s /opt/allure/bin/allure /usr/bin/allure
+
+    # 7. Проверяет установку Allure
+    - name: Verify Allure installation
+      run: allure --version
+
+    # 8. Запускает сервисы через docker-compose
     - name: Start services with Docker Compose
       run: |
         docker-compose up -d
 
-    # 6. Ждет 30 секунд пока сервисы запустятся
+    # 9. Ждет 30 секунд пока сервисы запустятся
     - name: Wait for services to be ready
       run: |
         echo "Waiting for services to be ready..."
         sleep 30
 
-    # 7. Запускает тесты 
-    - name: Run API tests
+    # 10. Запускает тесты с Allure
+    - name: Run API tests with Allure
       run: |
-        echo "Here would be API tests execution"
-        # docker run --network host your-test-image:latest
-
-    # 8. Создает папку для результатов
-    - name: Create test results directory
-      run: |
+        # Создаем директорию для результатов Allure
         mkdir -p allure-results
+        
+        # Запускаем тесты с генерацией Allure отчетов
+        pytest tests/ \
+          --alluredir=allure-results \
+          --clean-alluredir \
+          -v
+        
+        # Проверяем что результаты создались
+        echo "Allure results files:"
+        ls -la allure-results/
 
-    # 9. Сохраняет результаты как артефакт
-    - name: Upload test results
+    # 11. Генерирует HTML отчет
+    - name: Generate Allure report
+      run: |
+        allure generate allure-results -o allure-report --clean
+        echo "Allure report generated successfully!"
+
+    # 12. Сохраняет сырые результаты тестов
+    - name: Upload Allure results
       uses: actions/upload-artifact@v4
       with:
-        name: test-results
+        name: allure-results
         path: allure-results/
+        retention-days: 30
+
+    # 13. Сохраняет HTML отчет
+    - name: Upload Allure report
+      uses: actions/upload-artifact@v4
+      with:
+        name: allure-report
+        path: allure-report/
         retention-days: 30
