--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,27 +15,34 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # 2. Устанавливает Python
+    # 2. Устанавливает Docker Compose
+    - name: Set up Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
+
+    # 3. Устанавливает Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.14'
 
-    # 3. Устанавливает зависимости для тестов
+    # 4. Устанавливает зависимости для тестов
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
         pip install pytest allure-pytest requests
 
-    # 4. Устанавливает Ruff линтер
+    # 5. Устанавливает Ruff линтер
     - name: Install Ruff
       run: pip install ruff
 
-    # 5. Запускает линтер
+    # 6. Запускает линтер
     - name: Run Ruff linter
       run: ruff check .
 
-    # 6. Устанавливает Allure CLI
+    # 7. Устанавливает Allure CLI
     - name: Install Allure
       run: |
         sudo apt-get update
@@ -45,44 +52,39 @@ jobs:
         sudo mv allure-2.27.0 /opt/allure
         sudo ln -s /opt/allure/bin/allure /usr/bin/allure
 
-    # 7. Проверяет установку Allure
+    # 8. Проверяет установку Allure
     - name: Verify Allure installation
       run: allure --version
 
-    # 8. Запускает сервисы через docker-compose
+    # 9. Запускает сервисы через docker-compose
     - name: Start services with Docker Compose
       run: |
         docker-compose up -d
 
-    # 9. Ждет 30 секунд пока сервисы запустятся
+    # 10. Ждет 30 секунд пока сервисы запустятся
     - name: Wait for services to be ready
       run: |
         echo "Waiting for services to be ready..."
         sleep 30
 
-    # 10. Запускает тесты с Allure
+    # 11. Запускает тесты с Allure
     - name: Run API tests with Allure
       run: |
-        # Создаем директорию для результатов Allure
         mkdir -p allure-results
-        
-        # Запускаем тесты с генерацией Allure отчетов
         pytest tests/ \
           --alluredir=allure-results \
           --clean-alluredir \
           -v
-        
-        # Проверяем что результаты создались
         echo "Allure results files:"
         ls -la allure-results/
 
-    # 11. Генерирует HTML отчет
+    # 12. Генерирует HTML отчет
     - name: Generate Allure report
       run: |
         allure generate allure-results -o allure-report --clean
         echo "Allure report generated successfully!"
 
-    # 12. Сохраняет сырые результаты тестов
+    # 13. Сохраняет сырые результаты тестов
     - name: Upload Allure results
       uses: actions/upload-artifact@v4
       with:
@@ -90,7 +92,7 @@ jobs:
         path: allure-results/
         retention-days: 30
 
-    # 13. Сохраняет HTML отчет
+    # 14. Сохраняет HTML отчет
     - name: Upload Allure report
       uses: actions/upload-artifact@v4
       with:
