--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -123,30 +123,44 @@ jobs:
         echo "Final services status:"
         docker-compose ps
 
-    # 13. Запускает тесты с Allure
+    # Запускает тесты с Allure (УНИВЕРСАЛЬНЫЙ ВАРИАНТ)
     - name: Run API tests with Allure
       run: |
         echo "=== STARTING TESTS WITH ALLURE ==="
         mkdir -p allure-results
         
-        # Пробуем разные способы запуска тестов
-        echo "Attempt 1: Running from tests/ directory"
+        # Пробуем разные возможные пути к тестам
+        echo "Trying different test locations..."
+        
         if [ -d "tests" ]; then
-          python -m pytest tests/ \
-            --alluredir=allure-results \
-            --clean-alluredir \
-            -v \
-            --tb=short
+          echo "Running from tests/"
+          python -m pytest tests/ --alluredir=allure-results --clean-alluredir -v
+        elif [ -d "test" ]; then
+          echo "Running from test/"
+          python -m pytest test/ --alluredir=allure-results --clean-alluredir -v
+        elif find . -name "*test*.py" -type f | grep -q .; then
+          echo "Running all test files in project"
+          python -m pytest . --alluredir=allure-results --clean-alluredir -v
         else
-          echo "ERROR: tests directory not found!"
-          echo "Attempt 2: Running from current directory"
-          python -m pytest . \
-            --alluredir=allure-results \
-            --clean-alluredir \
-            -v \
-            --tb=short
+          echo "No test files found. Creating demo test..."
+          # Создаем демо-тест чтобы проверить Allure
+          cat > test_demo_allure.py << 'EOF'
+          import allure
+          import pytest
+          
+          @allure.feature("Demo Tests")
+          class TestDemo:
+              @allure.title("Simple passing test")
+              def test_pass(self):
+                  assert 1 + 1 == 2
+              
+              @allure.title("Simple failing test")  
+              def test_fail(self):
+                  assert 1 + 1 == 3
+          EOF
+          python -m pytest test_demo_allure.py --alluredir=allure-results --clean-alluredir -v
         fi
-
+        
         echo "=== ALLURE RESULTS ==="
         ls -la allure-results/
         echo "Number of result files: $(find allure-results -type f | wc -l)"
