--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,46 +2,66 @@ name: API Tests with Allure
 
 on:
   pull_request:
-    branches: [ main, develop, task_1_api ] 
+    branches: [ task_1_api ] 
   push:
-    branches: [ main, task_1_api ] 
+    branches: [ task_1_api ] 
     
 jobs:
   test:
     runs-on: ubuntu-latest
     
     steps:
-    # 1. Клонирует код репозитория
+    # 1. Клонирует код репозитория с указанием ветки
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        ref: task_1_api
 
-    # 2. Устанавливает Docker Compose
+    # 2. ДИАГНОСТИКА - проверяем структуру проекта
+    - name: Debug project structure
+      run: |
+        echo "=== CURRENT BRANCH ==="
+        git branch --show-current
+        echo "=== PROJECT STRUCTURE ==="
+        pwd
+        ls -la
+        echo "=== TESTS FOLDER CONTENT ==="
+        ls -la tests/ || echo "Tests folder not found"
+        echo "=== SEARCH FOR TEST FILES ==="
+        find . -name "*.py" | grep -E "(test_|_test)" | head -20 || echo "No test files found"
+
+    # 3. Устанавливает Docker Compose
     - name: Set up Docker Compose
       run: |
         sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
         sudo chmod +x /usr/local/bin/docker-compose
 
-    # 3. Устанавливает Python
+    # 4. Устанавливает Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.14'
+        python-version: '3.10'
 
-    # 4. Устанавливает зависимости
+    # 5. Устанавливает зависимости
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
-        pip install allure-pytest
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then 
+          pip install -r requirements.txt
+        else
+          echo "requirements.txt not found, installing basic dependencies"
+          pip install pytest allure-pytest requests docker-compose
+        fi
 
-    # 5. Устанавливает Ruff
+    # 6. Устанавливает Ruff
     - name: Install Ruff
       run: pip install ruff
 
-    # 6. Запускает линтер
+    # 7. Запускает линтер
     - name: Run Ruff linter
       run: ruff check . --fix
 
-    # 7. Устанавливает Allure
+    # 8. Устанавливает Allure
     - name: Install Allure
       run: |
         sudo apt-get update
@@ -51,7 +71,7 @@ jobs:
         sudo mv allure-2.27.0 /opt/allure
         sudo ln -sf /opt/allure/bin/allure /usr/bin/allure
 
-    # 8. Создает .env файл
+    # 9. Создает .env файл
     - name: Create environment file
       run: |
         cat > .env << EOF
@@ -65,42 +85,39 @@ jobs:
         AUTH_SERVICE_API_URL=http://localhost:8000
         EOF
 
-    # 9. Запускает сервисы
+    # 10. Запускает сервисы
     - name: Start services
       run: |
         docker-compose up -d
 
-    # 10. Ждет запуска сервисов
+    # 11. Ждет запуска сервисов
     - name: Wait for services
       run: |
-        sleep 10
+        sleep 30
 
-    # 11. ДИАГНОСТИКА - проверим что именно видит pytest
-    - name: Debug tests folder
+    # 12. Проверяем доступность сервисов
+    - name: Check services health
       run: |
-        echo "=== CHECKING TESTS FOLDER ==="
-        pwd
-        echo "Tests folder exists: $(ls -la tests/ | head -10)"
-        echo ""
-        echo "=== PYTEST DISCOVERY ==="
-        python -m pytest tests/ --collect-only
-        echo ""
-        echo "=== FILES IN TESTS ==="
-        find tests/ -name "*.py" -type f
+        echo "=== CHECKING SERVICES ==="
+        docker-compose ps
+        echo "=== CHECKING PORTS ==="
+        netstat -tulpn | grep :800 || echo "No services on port 800"
 
-    # 12. Запускает тесты с Allure
+    # 13. Запускает тесты с Allure
     - name: Run tests with Allure
       run: |
         mkdir -p allure-results
         pytest tests/ --alluredir=allure-results --clean-alluredir -v
 
-    # 12. Генерирует отчет Allure
+    # 14. Генерирует отчет Allure
     - name: Generate Allure report
+      if: always()
       run: |
         allure generate allure-results -o allure-report --clean
 
-    # 13. Сохраняет отчет
+    # 15. Сохраняет отчет
     - name: Upload Allure report
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: allure-report
