--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,11 +14,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-  # 2. Устанавливает Docker Compose
+    # 2. Устанавливает Docker Compose
     - name: Set up Docker Compose
-      uses: docker/setup-compose-action@v3
-      with:
-        version: 'v2.32.4'
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
 
     # 3. Устанавливает Python
     - name: Set up Python
