--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,101 +1,21 @@
-name: API Tests with Allure
+name: CI/CD Pipeline
 
-# Запуск для всех веток
 on:
   push:
   pull_request:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-    
-    steps:
-    # 1. Клонирует код репозитория
-    - name: Checkout code
-      uses: actions/checkout@v4
+    uses: ./.github/workflows/jobs/test.yml
+    secrets: inherit
+    with:
+      python-version: '3.12'
 
-    # 2. Устанавливает Docker Compose
-    - name: Set up Docker Compose
-      run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
+  scan:
+    uses: ./.github/workflows/jobs/scan.yml
+    secrets: inherit
 
-    # 3. Устанавливает Python
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
-
-    # 4. Устанавливает зависимости
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install allure-pytest
-
-    # 5. Устанавливает Ruff
-    - name: Install Ruff
-      run: pip install ruff
-
-    # 6. Запускает линтер
-    - name: Run Ruff linter
-      run: ruff check . --fix
-
-    # 7. Устанавливает Allure
-    - name: Install Allure
-      run: |
-        sudo apt-get update
-        sudo apt-get install default-jre -y
-        wget -q https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz
-        tar -zxvf allure-2.27.0.tgz
-        sudo mv allure-2.27.0 /opt/allure
-        sudo ln -sf /opt/allure/bin/allure /usr/bin/allure
-
-    # 8. Создает .env файл
-    - name: Create environment file
-      run: |
-        cat > .env << EOF
-        POSTGRES_USER=${{ vars.POSTGRES_USER || 'postgres' }}
-        POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD || 'password' }}
-        POSTGRES_DB_AUTH=${{ vars.POSTGRES_DB_AUTH || 'auth_db' }}
-        POSTGRES_DB_UNIVERSITY=${{ vars.POSTGRES_DB_UNIVERSITY || 'university_db' }}
-        UNIVERSITY_SERVICE_INTERNAL_URL=${{ vars.UNIVERSITY_SERVICE_INTERNAL_URL || 'http://university:8000' }}
-        UNIVERSITY_SERVICE_API_URL=${{ vars.UNIVERSITY_SERVICE_API_URL || 'http://localhost:8001' }}
-        AUTH_SERVICE_INTERNAL_URL=${{ vars.AUTH_SERVICE_INTERNAL_URL || 'http://auth:8000' }}
-        AUTH_SERVICE_API_URL=${{ vars.AUTH_SERVICE_API_URL || 'http://localhost:8000' }}
-        EOF
-
-    # 9. Запускает сервисы
-    - name: Start services
-      run: |
-        docker-compose up -d
-        
-    # 10. Запускает тесты с Allure
-    - name: Run tests with Allure
-      run: |
-        echo "=== RUNNING TESTS ==="
-        mkdir -p allure-results
-        pytest tests/ -v --alluredir=allure-results
-
-    # 11. Останавливает сервисы ПОСЛЕ тестов
-    - name: Stop services
-      if: always()
-      run: |
-        echo "=== STOPPING SERVICES ==="
-        docker-compose down
-
-    # 12. Генерирует отчет Allure
-    - name: Generate Allure report
-      if: always()
-      run: |
-        echo "=== GENERATING ALLURE REPORT ==="
-        allure generate allure-results -o allure-report --clean
-
-    # 13. Сохраняет отчет
-    - name: Upload Allure report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: allure-report
-        path: allure-report/
-        retention-days: 30
+  results:
+    needs: [test, scan]
+    uses: ./.github/workflows/jobs/results.yml
+    secrets: inherit
